Сохранение последних зменений в программе

--- a/DataFromYandeDisk/src/main/resources/application-data.properties
+++ b/DataFromYandeDisk/src/main/resources/application-data.properties
@@ -1,2 +1,3 @@
 yandex.login = vogu.itercodes.app
 yandex.disk.public_key = https://yadi.sk/d/idtdwftsZgq3KQ
+yandex.disk_access_token = AKQAAAAAExApWYiA1AV2xZSW6WEEyM4kj0stpQVdrFCLU
